# linux-rustlux

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  NOTICE  README.md
config/modprobe.d/: rustlux-defaults.conf  rustlux-security.conf
config/sysctl.d/: 90-rustlux-hardening.conf
ideas/: mem-sentinel-6000.md
modules/rustlux_example/: Cargo.toml  Kbuild  Makefile  dkms.conf
modules/rustlux_example/src/: lib.rs
patches/: 0002-bore-cachy.patch  0004-rustlux-splice-guard.patch  0005-rustlux-kernel-module.patch  0006-rustlux-perf-hook.patch  0007-rustlux-tiocsti-hook.patch  0008-rustlux-mem-sentinel.patch  0009-rustlux-soft-ecc.patch  0010-bsb-beyond-display.patch  0011-bsb-amd-dsc-fix.patch  0012-rustlux-softecc-seal-after-ro.patch
pkg/arch/: PKGBUILD  build.sh
pkg/arch/certs/: UnsyncLabs.pem
pkg/artix/: PKGBUILD
rust/: rustlux_bindings.h
rust/rustlux_mm/: Cargo.toml
rust/rustlux_mm/src/: lib.rs  mem_sentinel.rs  page_cache.rs  ro_after_init.rs  soft_ecc.rs  splice_guard.rs
rust/rustlux_sched/: Cargo.toml
rust/rustlux_sched/src/: bore.rs  bore_ffi.rs  lib.rs  params.rs
rust/rustlux_security/: Cargo.toml
rust/rustlux_security/src/: capabilities.rs  hardening.rs  hardening_ffi.rs  lib.rs
scripts/: build-initramfs.sh  build-package.sh  module-signing.sh  secureboot_sign.sh  use_repo_mok.sh
