# SPDX-License-Identifier: Apache-2.0 OR GPL-2.0-only
[package]
name        = "rustlux_sched"
description = "Rustlux scheduler — BORE (Burst-Oriented Response Enhancer) sobre EEVDF"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true

[lib]
crate-type = ["rlib"]
